--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error">Something went wrong</string>
     <string name="downloads">Downloads</string>
-    <string name="something_went_wrong">Something went wrong...</string>
+    <string name="something_went_wrong">Something went wrong…</string>
     <string name="try_again">Try Again</string>
-
+    <string name="discover_short_label">Discover news</string>
+    <string name="discover_long_label">See what\'s happening around you…</string>
+    <string name="feed_short_label">Daily news</string>
+    <string name="feed_long_label">Daily news</string>
     <string-array name="sports_array">
         <item>Shuttle Badminton</item>
         <item>Tennis</item>
