--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="feed_short_label">Daily news</string>
     <string name="feed_long_label">Daily news</string>
     <string name="dummy_text">NASA’s CAPSTONE mission launches to the moon</string>
+    <string name="newimgdescription">NewImgDescription</string>
     <string-array name="sports_array">
         <item>Shuttle Badminton</item>
         <item>Tennis</item>
